# delft-haskell-study-group

./: .gitignore  README.md
notes/: README.md  stack.yaml  study-group-notes.cabal
notes/src/: Chapter1_2_3.hs
